<resources>
    <string name="app_name">My Duties</string>
    <string name="DUTY_TRACE">Task Tracking</string>
    <string name="GROUP_DUTY">Group Task Tracing</string>
    <string name="LOCATION_DUTY">Location Based Task Tracing</string>
    <string name="DUTY_TRACE_DESC">You will be able to see the tasks assigned to you and receive notifications for unfinished tasks.</string>
    <string name="GROUP_DUTY_DESC">You will be able to create groups for task assignments and make reminders for your group friends.</string>
    <string name="LOCATION_DUTY_DESC">You will be able to receive notifications for the tasks you have forgotten with location definitions.</string>
    <string name="search">Search</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="FACEBOOK_LOWER">Facebook</string>
    <string name="CONTACTS">CONTACTS</string>
    <string name="CONTACTS_LOWER">Contacts</string>
    <string name="error">Error:</string>
    <string name="errorUpper">ERROR</string>
    <string name="addPersonToGroup">Add Friend to Group</string>
    <string name="selectLeastOneFriend">You must choose at least 1 person!</string>
    <string name="selectOneFriend">Please select a friend!</string>
    <string name="selectOneGroup">Please select a group!</string>
    <string name="selectLeastOneGroup">You must choose at least 1 group!</string>
    <string name="addFriendFirst">To create a group, you must have at least one follower!</string>
    <string name="addGroupName">Add group name</string>
    <string name="pleaseWriteGroupName">The group name cannot be empty!</string>
    <string name="deviceHasNoCamera">Device has no camera!</string>
    <string name="groupIsCreating">Group is composing...</string>
    <string name="writeGroupName">Write group name...</string>
    <string name="defineGroupNameAndIcon">Specify group name and icon</string>
    <string name="participant"> participants</string>
    <string name="constantItem">item</string>
    <string name="adminText">  Administrator  </string>
    <string name="selectPicture">Select Picture</string>
    <string name="SELECT_VIDEO">Select Video</string>
    <string name="openCamera">Open Camera</string>
    <string name="openGallery">Open Gallery</string>
    <string name="REMOVE_PHOTO">Remove photo</string>
    <string name="REMOVE_VIDEO">Remove video</string>
    <string name="EDIT">Edit</string>
    <string name="PLAY">Play</string>
    <string name="chooseProfilePhoto">Choose a profile photo</string>
    <string name="CHOOSE_GROUP_PHOTO">Choose a group photo</string>
    <string name="exitFromGroup">Exit From Group</string>
    <string name="areYouSureExitFromGroup">Are you sure you want to leave the group?</string>
    <string name="upperYes">YES</string>
    <string name="lowerYes">Yes</string>
    <string name="upperNo">NO</string>
    <string name="removeFromGroup">  Remove from the group</string>
    <string name="viewTheProfile">  View the profile</string>
    <string name="createdAt">Created at:</string>
    <string name="completedAt">Completed at:</string>
    <string name="changeAsAdmin">Make Group Admin</string>
    <string name="pleaseAddShareItem">You must add video, picture or text to share!</string>
    <string name="share">Share</string>
    <string name="locationIsEmpty">Location information is required to share</string>
    <string name="secondShort">sec</string>
    <string name="profileUpdateSuccessful">Profile Update is Successful</string>
    <string name="dragForDelete">Drag for Delete</string>
    <string name="finish">Finish</string>
    <string name="USE">Use</string>
    <string name="detail">Detail</string>
    <string name="searchGroup">Search Group</string>
    <string name="GROUPS_LOADING">Groups loading...</string>
    <string name="NEW_GROUP">Yeni Grup</string>
    <string name="typeToAddText">Say something...</string>
    <string name="writetaskdesc"><font size="12">Write task description...</font></string>
    <string name="UPDATING">Updating...</string>
    <string name="EXPLORE_PEOPLE">Explore People</string>
    <string name="VIEW_PENDING_REQUEST">View Pending Requests</string>
    <string name="THERE_IS_NO_GROUP_CREATE_OR_INCLUDE">There is no group you created or included</string>
    <string name="THERE_IS_NO_FACEFRIEND_WHO_USING_CATCHU">There is no Facebook friend who using My Duties</string>
    <string name="PHONE_NUM">Phone Number</string>
    <string name="SELECT_COUNTRY">Select Country</string>
    <string name="COUNTRY_NAME">Country Name</string>
    <string name="WRITE_PHONE_NUMBER">Write phone number</string>
    <string name="PLEASE_WRITE_VERIFICATION_CODE">Enter the 6 digit confirmation code that we send this number : </string>
    <string name="SEND_VERIFICATION_CODE_AGAIN">Send Code Again</string>
    <string name="CHANGE_PHONE_NUMBER">Change Phone Number</string>
    <string name="INVALID_VERIFICATION_CODE_ENTERED">Invalid verification code entered</string>
    <string name="VERIFY">Verify</string>
    <string name="REMAINING_TIME">Remaining Time : </string>
    <string name="NOT_ENTERED_VERIFY_CODE_IN_TIME">You did not enter the code within the given time. Please send the code again!</string>
    <string name="UPDATE_IS_SUCCESSFUL">Update is Successful</string>
    <string name="THERE_IS_NO_SEARCH_RESULT">No results found.</string>
    <string name="DEFAULT_POST_ERROR_MESSAGE">There was an error during the sharing, would you like to try again?</string>
    <string name="GROUP_SETTINGS">Group Settings</string>
    <string name="TAKE_SCREENSHOT">Take screenshot</string>
    <string name="CIRCLE_THE_PROBLEM">Take the problem round</string>
    <string name="SCREENSHOT">Take</string>
    <string name="searchUser">Search user...</string>
    <string name="IN_GROUP">In Group</string>
    <string name="REMOVE">Remove</string>
    <string name="REMOVE_FOLLOWER_TITLE">Remove Friend?</string>
    <string name="REMOVE_FOLLOWER_MESSAGE">Are you sure you want to remove this person from friends?</string>
    <string name="SEARCH_FOLLOWERS">Search followers...</string>
    <string name="SEARCH_FRIENDS">Search friends...</string>
    <string name="USER_NOT_FOUND">User not found.</string>
    <string name="GROUP_NOT_FOUND">Group not found.</string>
    <string name="cancelSendedRequest">The friend request sent will be withdrawn. Do you confirm?</string>
    <string name="searchUsers">Search Users</string>
    <string name="REMOVE_BLOCK_PERSON">You need to unblock to be able to chat with this person!</string>
    <string name="TO_BE_REMOVED_BLOCK_PERSON">You must be unblocked to communicate with this person!</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="giveNewName">Write New Group Name</string>
    <string name="groupPhotoChanging">Photo is changing...</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="sure_exit_not_saving_image">Are you want to exit without saving image?</string>
    <string name="image_saved_successfully">Image Saved Successfully</string>
    <string name="failed_to_save_image">Failed to save Image</string>
    <string name="rateus">Rate Us</string>
    <string name="commentFailed">Install an application market</string>
    <string name="gpsSettings">GPS Settings</string>
    <string name="gpsSettingMessage">GPS is not enabled. Click on setting to enable and get location, please start app again after turning on GPS.</string>
    <string name="settings">Settings</string>
    <string name="publicShareText">Public</string>
    <string name="friendsShareText">Special</string>
    <string name="groupsShareText">Groups</string>
    <string name="justMeShareText">Just Me</string>
    <string name="allFollowersShareText">All Followers</string>
    <string name="tasksmyassigned">Assignment</string>
    <string name="PUBLIC_SHARE_DESC">You share everyone</string>
    <string name="ALL_FOLLOWERS_SHARE_DESC">You share all followers</string>
    <string name="JUSTME_SHARE_DESC">You share just yourself</string>
    <string name="signOut">Sign Out</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="invite">Invite</string>
    <string name="request_sended">Request sent</string>
    <string name="cancel_following">Remove from followings?</string>
    <string name="ASKING_STOP_FOLLOWING">Are you sure you want to stop following?</string>
    <string name="PENDING_REQUESTS">Pending Requests</string>
    <string name="THERE_IS_NO_PENDING_REQUEST">There is no pending request</string>
    <string name="CONTACT_INVITE_MESSAGE">Do you want to follow group and friend tasks with the My Duties app? You can download the application from this link:</string>
    <string name="CONNECT_FACEBOOK">Connect Facebook</string>
    <string name="INVITE_YOUR_FRIENDS">Invite Your Friends</string>
    <string name="ADD_YOUR_FRIENDS">Add Your Friends</string>
    <string name="FACEBOOK_FRIENDS">Facebook Friends</string>
    <string name="ACCOUNT">Account</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="SUPPORT">Support</string>
    <string name="HELP_CENTER">About App</string>
    <string name="REPORT_PROBLEM">Report a Problem</string>
    <string name="CONTACT_FRIENDS">Contact Friends</string>
    <string name="PRIVATE_ACCOUNT">Private Account</string>
    <string name="VERSION">Version</string>
    <string name="ABOUT_APP">My Duties: If you have any questions
        or suggestions about the application, please write to us.
    </string>
    <string name="authoremail">catchuren@gmail.com</string>
    <string name="CURRENT_PASSWORD">Current password</string>
    <string name="NEW_PASSWORD">New password</string>
    <string name="NEW_PASSWORD_AGAIN">New password, again</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="register">Register</string>
    <string name="sendLink">Send Link</string>
    <string name="forgetPassText">We will send a link to your mail address. You can renew your password.</string>
    <string name="rememberMe">Remember Me</string>
    <string name="PERSONAL_INFORMATION">Personal Information</string>
    <string name="NAME">Name</string>
    <string name="BIRTHDAY">Birthday</string>
    <string name="PHONE">Phone</string>
    <string name="GENDER">Gender</string>
    <string name="WEBSITE">Website</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="UNEXPECTED_ERROR">An unexpected error has occurred!</string>
    <string name="UNKNOWN_ERROR">Operation failed!</string>
    <string name="emptyFeed">There is no waiting task...</string>
    <string name="serverError">Server Error</string>
    <string name="swipeDownForRefresh">Swipe down for refresh</string>
    <string name="delete">Delete</string>
    <string name="call_user">Call</string>
    <string name="remind">Remind</string>
    <string name="markAsUrgent">Mark as urgent</string>
    <string name="adminLogin">Admin Page</string>
    <string name="problems">Problems</string>
    <string name="viewUncompletedProblems">View Incomplete Problems</string>
    <string name="viewCompletedProblems">View Completed Problems</string>
</resources>