<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/close"
        android:orderInCategory="100"
        android:title="@string/close"
        app:showAsAction="never" />

    <item
        android:id="@+id/makeUrgent"
        android:orderInCategory="100"
        android:title="@string/markAsUrgent"
        app:showAsAction="never" />


    <item
        android:id="@+id/editText"
        android:orderInCategory="100"
        android:title="@string/editTaskText"
        app:showAsAction="never" />

    <item
        android:id="@+id/remind"
        android:orderInCategory="100"
        android:title="@string/remind"
        app:showAsAction="never" />

    <item
        android:id="@+id/callUser"
        android:orderInCategory="100"
        android:title="@string/call_user"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>

