<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_custom_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/ADD_YOUR_FRIENDS"
                        android:textStyle="bold"
                        android:textColor="@color/Black"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/addFromContactLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@android:drawable/ic_menu_call"
                        android:contentDescription="TODO" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/CONTACT_FRIENDS" />

                </LinearLayout>

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/INVITE_YOUR_FRIENDS"
                        android:textStyle="bold"
                        android:textColor="@color/Black"/>

                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/inviteForInstallLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invite" />

                </LinearLayout>


                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/ACCOUNT"
                        android:textStyle="bold"
                        android:textColor="@color/Black"/>

                </LinearLayout>

                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/changePasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CHANGE_PASSWORD" />

                </LinearLayout>


                <View
                    android:id="@+id/view8"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/SUPPORT"
                        android:textStyle="bold"
                        android:textColor="@color/Black"/>

                </LinearLayout>


                <View
                    android:id="@+id/view9"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/helpCenterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/HELP_CENTER" />

                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/problemInformLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/REPORT_PROBLEM" />
                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/adminLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adminLogin"
                        android:textStyle="bold"
                        android:textColor="@color/Red"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_weight="1"
                    android:background="@color/fab_color_shadow" />

                <LinearLayout
                    android:id="@+id/logoutLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:fontFamily="@font/amiko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signOut"
                        android:textColor="@color/Red"
                        android:textStyle="bold"/>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</RelativeLayout>