<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainExceptionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/noPostFoundLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_sad_black_100dp"
            android:visibility="gone"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/txtNoItemFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/emptyFeed"
            android:textColor="@color/tintColor"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/retryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <uren.com.myduties.utils.ClickableImage.ClickableImageView
            android:id="@+id/imgRetry"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_retry_black_100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/swipeDownForRefresh"
            android:textColor="@color/tintColor"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/serverError"
            android:textColor="@color/tintColor"
            android:textSize="17sp" />

    </LinearLayout>


</RelativeLayout>

