<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_custom_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/clearWhite"
                android:gravity="bottom">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/amiko"
                    android:gravity="bottom"
                    android:text="@string/problems"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_weight="1"
                android:background="@color/fab_color_shadow" />

            <LinearLayout
                android:id="@+id/incompleteProblemsll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/viewUncompletedProblems" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_weight="1"
                android:background="@color/fab_color_shadow" />


            <LinearLayout
                android:id="@+id/completedProblemsll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/viewCompletedProblems" />

            </LinearLayout>

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_weight="1"
                android:background="@color/fab_color_shadow" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>